# MTGBuilder

./: LICENSE  MTGBuilder.cabal  README.MD
app/: Main.hs
src/: Main.hs
src/MTGBuilder/: Combination.hs  Deck.hs  Dump.hs  Options.hs  Parser.hs
