name:                MTGBuilder
version:             0.2.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ElvishJerricco/MTGBuilder#readme
license:             BSD3
license-file:        LICENSE
author:              ElvishJerricco
maintainer:          elvishjerricco@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MTGBuilder.Combination
                     , MTGBuilder.Deck
                     , MTGBuilder.Options
                     , MTGBuilder.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010

executable MTGBuilder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MTGBuilder
                     , parsec
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite MTGBuilder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MTGBuilder
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/MTGBuilder
